crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__comment.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..17
  run "x" @0..1
  run "+" @14..15
  run "y" @16..17
-- problems --
