crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__decimal-and-comma.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..10
  run "3.14" @0..4
  run "," @4..5
  run "2.71" @6..10
-- problems --
