crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__doubled-braces.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..16
  frac Bar @0..16
    row @5..11
      row @6..10
        run "RT" @7..9
    row @11..16
      row @12..15
        run "n" @13..14
-- problems --
