crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__empty-group.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..4
  run "x" @0..1
  row @1..3
  run "y" @3..4
-- problems --
