crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__factorial.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..2
  run "n!" @0..2
-- problems --
