crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__greek.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..23
  sym "α" @0..6
  run "+" @7..8
  sym "β" @9..14
  run "=" @15..16
  sym "γ" @17..23
-- problems --
