crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__leading-trailing-space.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..9
  run "x" @2..3
  run "+" @4..5
  run "y" @6..7
-- problems --
