crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__basic__multi-line-inline.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..5
  run "a" @0..1
  run "+" @2..3
  run "b" @4..5
-- problems --
